[package]
name = "countries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
prettytable-rs = "0.8.0"
reqwest = { version = "0.11.10" }
scraper = "0.13.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
tokio = { version = "1.18.1", features = ["rt-multi-thread", "macros"] }
